objects/Form_Builder__Titan_Sign_Document__c.object
<CustomObject>
    <fields>
        <fullName>Form_Builder__Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Builder__Generated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Generated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TItan_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Number_Of_Signers__c</fullName>
        <label>Number Of Signers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Titan_DocId__c</fullName>
        <externalId>true</externalId>
        <label>Titan DocId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Titan_TemplateId__c</fullName>
        <label>Titan TemplateId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Using_IP_Address__c</fullName>
        <label>Using IP Address</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Builder__Voided_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voided By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Voided_Titan_Sign_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Titan Sign Document</label>
    <nameField>
        <displayFormat>TSD-{0000000}</displayFormat>
        <label>TSD#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Titan Sign Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>